# CSE260

./: README.md
Aliev-Panfilov_Electrocardiac_Simulation(Supercomputer_MPI)/: CMakeLists.txt  README.md  apf.cpp  batch_serial.sh  helper.cpp  p8-bang.sh  remake_and_run.sh  solve.cpp
Aliev-Panfilov_Electrocardiac_Simulation(Supercomputer_MPI)/.ipynb_checkpoints/: Graphs-checkpoint.ipynb
Aliev-Panfilov_Electrocardiac_Simulation(Supercomputer_MPI)/COMET_scripts/: N1_comet-24.slurm  N1_comet-48.slurm  N1_comet-96.slurm  N8k_comet-192.slurm  N8k_comet-384.slurm  N8k_comet-480.slurm  N8k_comet-96.slurm
Aliev-Panfilov_Electrocardiac_Simulation(Supercomputer_MPI)/Deprecated/: DECLARATION  teameval.txt
Aliev-Panfilov_Electrocardiac_Simulation(Supercomputer_MPI)/TestData/: Comet.N_1800_Dim24.xlsx  Comet.N_1800_Dim48.xlsx  Comet.N_1800_Dim96.xlsx  Comet.N_8000_Dim192.xlsx  Comet.N_8000_Dim384.xlsx  Comet.N_8000_Dim480.xlsx  Comet.N_8000_Dim96.xlsx  DATA.txt  Graph_DataParsing.ipynb  Graphs.ipynb  ScalingEfficiency.N_1800.xlsx  ScalingEfficiency.N_8000.xlsx
Aliev-Panfilov_Electrocardiac_Simulation(Supercomputer_MPI)/apf-ref/: apf  apf-ref.fa17
Matrix_Multiplication(GPU_CUDA)/: .parsedLogs{}FIND.txt  CMakeLists.txt  README.md  mmpy_kernel.cu  remake_and_run.sh  setGrid.cu  single_GPU.scr
Matrix_Multiplication(GPU_CUDA)/.ipynb_checkpoints/: Graphs-checkpoint.ipynb
Matrix_Multiplication(GPU_CUDA)/Cited/: My Collection.bib  whitepaper.bib
Matrix_Multiplication(GPU_CUDA)/Deprecated/: DECLARATION  teameval.txt
Matrix_Multiplication(GPU_CUDA)/TestData/: Graphs.ipynb  (+5 more)
(+150 files in other folders)
